####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = hi16-action-phrasebook.png hi16-action-phrasebook_new.png hi16-action-phrasebook_open.png hi16-action-phrasebook_save.png hi22-action-phrasebook.png hi22-action-phrasebook_new.png hi22-action-phrasebook_open.png hi22-action-phrasebook_save.png hi32-action-phrasebook.png hi32-action-phrasebook_new.png hi32-action-phrasebook_open.png hi32-action-phrasebook_save.png hi16-action-phrasebook_closed.png hi22-action-phrasebook_closed.png hi32-action-phrasebook_closed.png 

install-data-local:
	$(mkinstalldirs) $(kde_icondir)/hicolor/16x16/actions/
	$(INSTALL_DATA) $(srcdir)/hi16-action-phrasebook.png $(kde_icondir)/hicolor/16x16/actions/phrasebook.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/16x16/actions/
	$(INSTALL_DATA) $(srcdir)/hi16-action-phrasebook_new.png $(kde_icondir)/hicolor/16x16/actions/phrasebook_new.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/16x16/actions/
	$(INSTALL_DATA) $(srcdir)/hi16-action-phrasebook_open.png $(kde_icondir)/hicolor/16x16/actions/phrasebook_open.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/16x16/actions/
	$(INSTALL_DATA) $(srcdir)/hi16-action-phrasebook_save.png $(kde_icondir)/hicolor/16x16/actions/phrasebook_save.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/22x22/actions/
	$(INSTALL_DATA) $(srcdir)/hi22-action-phrasebook.png $(kde_icondir)/hicolor/22x22/actions/phrasebook.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/22x22/actions/
	$(INSTALL_DATA) $(srcdir)/hi22-action-phrasebook_new.png $(kde_icondir)/hicolor/22x22/actions/phrasebook_new.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/22x22/actions/
	$(INSTALL_DATA) $(srcdir)/hi22-action-phrasebook_open.png $(kde_icondir)/hicolor/22x22/actions/phrasebook_open.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/22x22/actions/
	$(INSTALL_DATA) $(srcdir)/hi22-action-phrasebook_save.png $(kde_icondir)/hicolor/22x22/actions/phrasebook_save.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/32x32/actions/
	$(INSTALL_DATA) $(srcdir)/hi32-action-phrasebook.png $(kde_icondir)/hicolor/32x32/actions/phrasebook.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/32x32/actions/
	$(INSTALL_DATA) $(srcdir)/hi32-action-phrasebook_new.png $(kde_icondir)/hicolor/32x32/actions/phrasebook_new.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/32x32/actions/
	$(INSTALL_DATA) $(srcdir)/hi32-action-phrasebook_open.png $(kde_icondir)/hicolor/32x32/actions/phrasebook_open.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/32x32/actions/
	$(INSTALL_DATA) $(srcdir)/hi32-action-phrasebook_save.png $(kde_icondir)/hicolor/32x32/actions/phrasebook_save.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/16x16/actions/
	$(INSTALL_DATA) $(srcdir)/hi16-action-phrasebook_closed.png $(kde_icondir)/hicolor/16x16/actions/phrasebook_closed.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/22x22/actions/
	$(INSTALL_DATA) $(srcdir)/hi22-action-phrasebook_closed.png $(kde_icondir)/hicolor/22x22/actions/phrasebook_closed.png
	$(mkinstalldirs) $(kde_icondir)/hicolor/32x32/actions/
	$(INSTALL_DATA) $(srcdir)/hi32-action-phrasebook_closed.png $(kde_icondir)/hicolor/32x32/actions/phrasebook_closed.png

uninstall-local:
	-rm -f $(kde_icondir)/hicolor/16x16/actions/phrasebook.png
	-rm -f $(kde_icondir)/hicolor/16x16/actions/phrasebook_new.png
	-rm -f $(kde_icondir)/hicolor/16x16/actions/phrasebook_open.png
	-rm -f $(kde_icondir)/hicolor/16x16/actions/phrasebook_save.png
	-rm -f $(kde_icondir)/hicolor/22x22/actions/phrasebook.png
	-rm -f $(kde_icondir)/hicolor/22x22/actions/phrasebook_new.png
	-rm -f $(kde_icondir)/hicolor/22x22/actions/phrasebook_open.png
	-rm -f $(kde_icondir)/hicolor/22x22/actions/phrasebook_save.png
	-rm -f $(kde_icondir)/hicolor/32x32/actions/phrasebook.png
	-rm -f $(kde_icondir)/hicolor/32x32/actions/phrasebook_new.png
	-rm -f $(kde_icondir)/hicolor/32x32/actions/phrasebook_open.png
	-rm -f $(kde_icondir)/hicolor/32x32/actions/phrasebook_save.png
	-rm -f $(kde_icondir)/hicolor/16x16/actions/phrasebook_closed.png
	-rm -f $(kde_icondir)/hicolor/22x22/actions/phrasebook_closed.png
	-rm -f $(kde_icondir)/hicolor/32x32/actions/phrasebook_closed.png

####### kdevelop will overwrite this part!!! (end)############
