####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = hi16-action-phrasebook.png hi16-action-phrasebook_new.png hi16-action-phrasebook_open.png hi16-action-phrasebook_save.png hi22-action-phrasebook.png hi22-action-phrasebook_new.png hi22-action-phrasebook_open.png hi22-action-phrasebook_save.png hi32-action-phrasebook.png hi32-action-phrasebook_new.png hi32-action-phrasebook_open.png hi32-action-phrasebook_save.png hi16-action-phrasebook_closed.png hi22-action-phrasebook_closed.png hi32-action-phrasebook_closed.png 

####### kdevelop will overwrite this part!!! (end)############

kmouthiconsdir = $(kde_datadir)/kmouth/icons
kmouthicons_ICON = AUTO
